# umadb

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-release-python-client-wheels-and-sdist.yml  build-and-release-server-binaries-and-docker-images.yml  deprecated-docker.yml  python-client.yml  release.yml  rust.yml  wip-ci.yml
crates/proto/: Cargo.toml  build.rs
crates/python/: Cargo.toml
crates/server/: Cargo.toml
crates/tests-integration/: Cargo.toml
crates/tests-integration/tests/: event_store_test.rs  grpc_streaming_test.rs  health_check.rs  secure_grpc.rs  unconditional_append_hotspot.rs
crates/umadb/: Cargo.toml
tests-integration/: Cargo.toml
tests-integration/tests/: api_key.rs  client_methods.rs  event_store_test.rs  next_batch_behaviour.rs  path_rewrite_test.rs  secure_grpc.rs  tracking_grpc.rs
umadb/: Cargo.toml  README.md
umadb-benches/: Cargo.toml
umadb-client/: Cargo.toml
umadb-client/examples/: client_async_insecure.rs  client_async_secure.rs  client_sync_insecure.rs  client_sync_secure.rs
umadb-client/src/: lib.rs
umadb-core/: Cargo.toml
umadb-core/src/: db.rs  events_tree.rs  events_tree_nodes.rs  free_lists_tree_nodes.rs  header_node.rs  mvcc.rs  node.rs  page.rs  pager.rs  tags_tree.rs  tags_tree_nodes.rs  tracking_tree_nodes.rs
umadb-core/tests/: tracking_append_batch_tests.rs
umadb-dcb/: Cargo.toml
umadb-dcb/src/: lib.rs
umadb-proto/: Cargo.toml
umadb-proto/proto/v1/: umadb.proto
umadb-proto/src/: lib.rs
umadb-python/: Cargo.toml  README.md  generate_stubs.py  pyproject.toml
umadb-python/examples/: basic_usage.py
umadb-python/python/umadb/: __init__.py  _umadb.pyi
umadb-python/src/: lib.rs
umadb-server/: Cargo.toml
umadb-server/src/: lib.rs
umadb/src/: lib.rs
