[package]
description = "Python bindings for UmaDB event store client"
name = "umadb-python"
version = "0.1.21"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyeventsourcing/umadb"
keywords = ["event-store", "grpc", "client", "python"]
categories = ["database", "network-programming"]
publish = false

[package.metadata.release]
release = false

[lib]
name = "umadb"
crate-type = ["cdylib"]

[dependencies]
umadb-client = { path = "../umadb-client", version = "0.1.21" }
umadb-dcb = { path = "../umadb-dcb", version = "0.1.21" }
pyo3 = { version = "0.24", features = ["abi3-py310", "extension-module"] }
uuid = { workspace = true }
