[package]
name = "umadb-server"
description = "Event store Dynamic Consistency Boundaries"
repository = "https://github.com/pyeventsourcing/umadb"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
umadb-dcb = { path = "../dcb", version = "0.1.21" }
umadb-core = { path = "../core", version = "0.1.21" }
umadb-proto = { path = "../proto", version = "0.1.21" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1.14"
async-trait = { workspace = true }
