[package]
description = "Event store built for Dynamic Consistency Boundaries"
name = "umadb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
umadb-server = { path = "../server", version = "0.1.21" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { workspace = true }

[[bin]]
name = "umadb"
path = "src/bin/umadb.rs"
